Fix bleeding into border

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -529,7 +529,7 @@ h4
 	width:100%;
 	overflow:hidden;
 	position:relative;
-	min-height: 310px;
+	min-height: 330px;
 	background:url(../images/bg-content-b.gif) no-repeat 0 100%;
 }
 .products-box{
